minor updates to feed output

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,7 @@
 <body>
   <h1>Hello News World</h1>
   <div id="description">
-    <p>Test tech crunch</p>
+    <p>Test recode</p>
   </div>
   <div id="test">
     <button id="newsButton" class="search search-content" type='submit'>Submit</button>
