--- a/views/index.ejs
+++ b/views/index.ejs
@@ -28,8 +28,14 @@
 
   <div id="snews_column">
     <ul>
-      <!-- Saved Content-->
-      All yer saved stuff will go here.
+      <h3>Saved Stories</h3>
+      <% news.forEach( story => { %>
+      <li>
+        <a href="/story/<%= story.story_id %>">
+          <%= story.story_title %> <%= story.story_desc %>
+        </a>
+      </li>
+      <% }); %>
     </ul>
   </div>
 </body>
