still not working...

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,7 +31,7 @@
       <h3>Saved Stories</h3>
       <% news.forEach( story => { %>
       <li>
-        <a href="/story/<%= story.story_id %>">
+        <a href="/stories/<%= story.story_id %>">
           <%= story.story_title %> <%= story.story_desc %>
         </a>
       </li>
