minor updates and fix delete error

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,11 @@
 
 <body>
   <header id="header" class="none">
-    <h1>Hello News World</h1>
+    <h1>Fast Feed</h1>
+    <div class="intro">
+      <p>Why have a regular news feed that just saves news stories when you can also edit them yourself? Have news your way!</p>
+      <p>Choose your news feed on left hand side, then click on the title of a story to open it in a new window. If you want to add the story to one of your saved feeds, click the add button. Your story will be added to the bottom of the Saved Stories section. Then to make the story your own, click on the title of your saved story and add some extra pickles! </p>
+    </div>
   </header><!-- /header -->
 
   <div id="left_column" class="col-md-2">
